ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: decase-ingress
  namespace: sk-team-08
spec:
  ingressClassName: public-nginx
  rules:
  - host: decase.skala25a.project.skala-ai.com
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: decase
            port:
              number: 8080
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: decase
            port:
              number: 8080
      - path: /ai/api/v1/decase/docs
        pathType: Prefix
        backend:
          service:
            name: decase-ai
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: decase-fe
            port:
              number: 80
  tls:
  - hosts:
    - decase.skala25a.project.skala-ai.com
    secretName: decase-team-08-tls-secret
